# site-monitor

./: Cargo.toml  README.md  build.rs  config.json  websites.txt
.github/workflows/: rust.yml
src/: auth.rs  config.rs  emailer.rs  error.rs  interface.rs  main.rs  monitor.rs  profile.rs  watcher.rs
src/interface/: mock.rs  production.rs
systemd/: site-monitor.service
