[package]
name = "site-monitor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-curl = "0.4"
async-trait = "0.1.86"
chrono = "0.4"
curl-http-client = "2.3"
derive-deref-rs = "0.1"
directories = "6.0"
env_logger = "0.11"
futures = "0.3.31"
log = "0.4"
mail-send = "0.5"
oauth2 = { version = "5.0", default-features = false }
serde = "1.0"
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.43", features = ["full"] }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[target.x86_64-pc-windows-msvc]
linker = "link.exe"

[target.x86_64-apple-darwin]
linker = "cc"
